@@ -1,0 +1,4 @@
+"""Test deprecated methods from Python 3.9."""
+
+import binascii
+binascii.b2a_hqx() # [deprecated-method]
