@@ -1,0 +1,4 @@
+"""Test deprecated modules from Python 3.9."""
+# pylint: disable=unused-import
+
+import binhex  # [deprecated-module]
